@@ -35,6 +35,18 @@ def test_areena_html5_metadata():
     ]
 
 
+def test_metadata_language():
+    meta_fin = fetch_metadata(
+        'https://areena.yle.fi/1-403848', meta_languages=['fin', 'swe'])
+    title_fin = meta_fin[0].get('title')
+    assert title_fin.startswith('Suomen tie jatkosotaan')
+
+    meta_swe = fetch_metadata(
+        'https://areena.yle.fi/1-403848', meta_languages=['swe', 'fin'])
+    title_swe = meta_swe[0].get('title')
+    assert title_swe.startswith('Finlands väg till fortsättningskriget')
+
+
 @pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') != '1',
                     reason="Test works only in Finland")
 def test_areena_iphone_stream_url():
